# tasker

./: CLAUDE.md  GEMINI.md  PROJECT.md  README.md  TODO.md  package-lock.json  package.json
history/: 20260105.md
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: db.rs  google.rs  lib.rs  main.rs
src/routes/: +layout.svelte  +page.svelte
src/routes/calendar/: +page.svelte
src/routes/settings/: +page.svelte
src/routes/task/[id]/: +page.svelte
